<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ActionBarTestActivity!</string>
    <string name="app_name">通讯录社交助手</string>
    <string name="tab1">账号</string>
    <string name="tab2">关联</string>
    <string name="tab3">绑定</string>
    <string name="start">开始</string>
    <string name="tab4">同步</string>

    <color name="actionbar_fonts">#FFFFFF</color>

    <string name="list_title">&lt;--通讯录       社交好友--&gt;</string>
    <string name="sync">同步</string>
    <string name="auto_syc">自动更新</string>
    <string name="sync_circle">更新周期</string>
    <string name="perhour">每小时</string>
    <string name="perday">每天</string>
    <string name="perweek">每周</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_update">更新中</string>

</resources>